--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "printpaper-core",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://manjiriparab.github.io/Print-World",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
