--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "printpaper-core",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://manjiriparab.github.io/Print-World",
+  "homepage": "http://manjiriparab.github.io/print-world",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -12,7 +12,6 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "formik": "^2.2.5",
-    "gh-pages": "^3.2.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
@@ -49,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
