--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "printpaper-core",
   "version": "0.1.0",
   "private": false,
-  "homepage": "http://manjiriparab.github.io/print-world",
+  "homepage": "https://manjiriparab.github.io/print-world/",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
